2013-04-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (severity-bar): Make threat parameter default to
	cvss-threat return value and title parameter to threat's value.
	(info/nvt, info/cpe, info/cve): Remove unneeded
	severity-bar argument values.

2013-04-11  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/omp.xsl (cvss_calculator): Fix a typo.

2013-04-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/help.xsl (cvss_calculator.html): Fix typo.

	* src/html/omp.xsl (cvss-threat): New function. Returns cvss threat
	name for a given cvss score value.
	(severity-bar): Add scale parameter to adjust size of the bar.
	(info/cpe): Use cvss-threat function.
	(info/nvt, info/cve): Show a severity bar for the CVSS value.
	(cvss_calculator): Fix error message typo and result cell spacing.

2013-04-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (severity-bar): Add colons in subtitles. Align
	calculation results and detail invalid vector error message.

	* src/html/help.xsl (cvss_calculator.html): Add icon to Link to CVSS
	Calculator. Make example CVSS Vector an actual link to the calculator.

2013-04-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/omp.xsl (severity-bar): Add text parameter to add text
	between parenthesizes.
	(info/cpe): Output max cvss value as a severity bar instead of simple
	text.
	(result-detailed): Add threat value as text argument for severity-bar
	call.

2013-04-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (cvss_calculator): Send back cvss metrics separately
	when a user uses a cvss vector.

	* src/html/help.xsl (cvss_calculator.html): Fix typo.

	* src/html/omp.xsl (cvss_calculator): Update page presentation for
	consistent positioning and size of metrics' dropdown menus. Remove table
	rows highlighting and fix error message.

2013-04-10  Matthew Mundell <matthew.mundell@greenbone.net>
