@@ -1,3 +1,12 @@
+2013-04-11  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/html/omp.xsl (filter-window-part): Set the value of the -- option
+	in the filter dropdown to "--".  The is to differentiate it from the link
+	in the menu.
+
+	* src/gsad_omp.c (get_many): Check for a filt_id of "--", and use the
+	system filter instead.
+
 2013-04-11  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* src/html/omp.xsl (severity-bar): Make threat parameter default to
